# guityaar

./: Cargo.toml  build.rs
src/: main.rs
src/models/: mod.rs
src/utils/: mod.rs
ui/: song_view.slint
