[package]
name = "guityaar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.2.2"
slint = "1.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15.4"
unicode-segmentation = "1.11"
fontdue = "0.9.3"
fontdb = "0.23.0"
unicode-general-category = "1.1.0"

[build-dependencies]
slint-build = "1.12.1"


